--- a/ovi.css
+++ b/ovi.css
@@ -122,7 +122,39 @@ position:absolute;
 	margin-top: 1%;
 }
 .foros {
-	width: 90%;
-	margin-right: 4%;
-	margin-left: 4%;
+	width: 81%;
+	margin-left: 2%;
+	float: left;
+	margin-bottom: 3%;
+}
+.redes {
+	float: right;
+	width: 13%;
+	margin-left: 1%;
+}
+.gplus {
+	width: 10%;
+}
+.pinte {
+	width: 10%;
+}
+
+.face {
+	width: 10%;
+}
+
+.twitt {
+	width: 10%;
+}
+.textoi {
+	width: 80%;
+	margin-top: 3%;
+	margin-right: 7%;
+	margin-left: 3%;
+	text-align: justify;
+	font-size: 20px;
+	font-family: Antic;
+}
+.medioi {
+	width: 99%;
 }
